fixed overlaping group chore display on window resize

--- a/src/components/chore-manager/group-chores.css
+++ b/src/components/chore-manager/group-chores.css
@@ -53,3 +53,11 @@
     white-space: nowrap;
     top:15px;
 }
+
+
+
+@media screen and (max-width: 850px) {
+    .chore-display-box {
+        padding-top: 60px;
+    }
+}
